# fresh-cli

./: .env  .env.example  .gitignore  README.md  pyproject.toml
src/fresh_cli/: __init__.py  __main__.py  api.py  config.py
src/fresh_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
