[project]
name = "fresh-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
]

[project.scripts]
fresh-cli = "fresh_cli.__main__:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
